feat: add Dockerfile, render.yaml, and production config for Render deploy
Co-Authored-By: thicp10@outlook.com <thicp10@outlook.com>